exports[`Component > Checkbox renders correctly 1`] = `
<Checkbox
  checked={true}
  label="Do the thing?">
  <div
    className="checkbox">
    <label>
      <input
        checked={true}
        type="checkbox" />
    </label>
  </div>
</Checkbox>
`;

exports[`Component > File renders correctly 1`] = `
<File
  label="Select files"
  multiple={true}
  name="files"
  value={undefined}>
  <Group
    label="Select files"
    multiple={true}
    name="files"
    value={undefined}>
    <div
      className="form-group">
      <label>
        Select files
      </label>
      <Input
        label="Select files"
        multiple={true}
        name="files"
        type="file"
        value={undefined}>
        <input
          className="form-control"
          multiple={true}
          name="files"
          placeholder="Select files"
          type="file"
          value={undefined} />
      </Input>
    </div>
  </Group>
</File>
`;

exports[`Component > Group renders correctly 1`] = `
<Group>
  <div
    className="form-group" />
</Group>
`;

exports[`Component > Input renders correctly 1`] = `
<Input
  name="someInput"
  placeholder="Enter Text"
  value="">
  <input
    className="form-control"
    name="someInput"
    placeholder="Enter Text"
    value="" />
</Input>
`;

exports[`Component > Number renders correctly 1`] = `
<Number
  name="someNumber"
  placeholder="Enter Number"
  value={12345}>
  <Group
    name="someNumber"
    placeholder="Enter Number"
    value={12345}>
    <div
      className="form-group">
      <Input
        name="someNumber"
        placeholder="Enter Number"
        type="number"
        value={12345}>
        <input
          className="form-control"
          name="someNumber"
          placeholder="Enter Number"
          type="number"
          value={12345} />
      </Input>
    </div>
  </Group>
</Number>
`;

exports[`Component > Select renders correctly 1`] = `
<Select
  label="Select an option"
  value="">
  <Group
    label="Select an option"
    value="">
    <div
      className="form-group">
      <label>
        Select an option
      </label>
      <select
        className="form-control"
        label="Select an option"
        value="">
        <option
          value="1">
          1
        </option>
        <option
          value="2">
          2
        </option>
      </select>
    </div>
  </Group>
</Select>
`;

exports[`Component > SelectMultiple renders correctly 1`] = `
<SelectMultiple
  label="Select multiple options"
  value="">
  <Group
    label="Select multiple options"
    value="">
    <div
      className="form-group">
      <label>
        Select multiple options
      </label>
      <select
        className="form-control"
        label="Select multiple options"
        multiple={true}
        value="">
        <option
          value="1">
          1
        </option>
        <option
          value="2">
          2
        </option>
      </select>
    </div>
  </Group>
</SelectMultiple>
`;

exports[`Component > Text renders correctly 1`] = `
<Text
  label="Enter text"
  name="someText"
  value="blah">
  <Group
    label="Enter text"
    name="someText"
    value="blah">
    <div
      className="form-group">
      <label>
        Enter text
      </label>
      <Input
        label="Enter text"
        name="someText"
        type="text"
        value="blah">
        <input
          className="form-control"
          name="someText"
          placeholder="Enter text"
          type="text"
          value="blah" />
      </Input>
    </div>
  </Group>
</Text>
`;
